# wake-o-matic

./: test_cascade.cpp
src/: CMakeLists.txt  main.cpp
src/modules/: actionStateMachine.h  camera.cpp  frameProcessor.cpp  frameProcessor.h  logging.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  cppTests.cpp  tests.cpp
